[BUG FIXES] Sidebar bug fixes  (#156)
* Fix horizontal scroll in teams

* Change headers for sidebars

* Rename goal header

* Made headers unclickable

* Update snapshots

--- a/pokematic-frontend/src/pages/board-components/GoalSideBar.css
+++ b/pokematic-frontend/src/pages/board-components/GoalSideBar.css
@@ -24,7 +24,6 @@
 }
 
 .AllTasks {
-    padding-top: 70px;
     width: 225px;
     font-size: 35px !important; 
 }
